finished second section for desktop version and slightly changed code for mobile version

--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
 
     <section id="why">
         <div class="flex-container-2">
-            <div class="images">
+            <div class="images-1">
             <img src="images\Rank, Projects.png" alt="Rank, Projects" id="rank">
-            <img src="images\Top Earners.png" alt="Top Earners" id="top-earners">
+            <div class="wrapper"><img src="images\Top Earners.png" alt="Top Earners" id="top-earners"></div>
             </div>
             <div id="why-desc">
                 <div>
                     Why do you need task management software?
                 </div>
                 <p>
-                    Do you waste time orginizing sticky notes, searching your eamil and apps 
+                    Do you waste time organizing sticky notes, searching your eamil and apps 
                     for to-dos, and figuring out what to work on first?
                     Then you need one solution to prioritize your tasks, manage your time
                     and meet your deadline
@@ -88,7 +88,7 @@
     </section>
 
     <section id="seamless">
-        <div class="images">
+        <div class="images-2">
             <img src="images\Banner.png" alt="banner" id="banner">
             <img src="images\Group 227.png" alt="alice-martin" id="alice">
         </div>
