finished another section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     </section>
 
     <section id="seamless">
+        <div class="flex-container-4">
         <div class="images-2">
             <img src="images\Banner.png" alt="banner" id="banner">
             <img src="images\Group 227.png" alt="alice-martin" id="alice">
@@ -103,6 +104,7 @@
                 and meet your deadlines.
             </p>
             <img src="images\Group 224.png" alt="learn more" id="learn-more">
+        </div>
         </div>
     </section>
 
