finished another section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 Then you need one solution to prioritize your tasks, manage your time
                 and meet your deadlines.
             </p>
-            <img src="images\Group 224.png" alt="learn more" id="learn-more">
+            <img src="images\Group 224.png" alt="learn more" id="learn-more-2">
         </div>
         </div>
     </section>
