--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
             but the majority have suffered alteration in some form, 
             by injected humour,
         </p>
-        <div class="button">
+        <div class="button" id = "buttonn">
         <label for="email"></label>
         <input type="text" id="email" name="email" placeholder="Name@company.com">
         <button type="button" id="button1">Try for free</button>
         </div>
-
+        
+        
     <section class="grid">
         <div><img src="images\Cartoon_Network_logo.png"></div>
         <div><img src="images\Booking.com_logo.png"></div>
@@ -132,10 +133,9 @@
         <p>
             See why millions of people across 195 countries use Dash.
         </p>
-        <div class="button">
+        <div class="button" id="button2">
         <label for="email"></label>
         <input type="text" id="email" name="email" placeholder="Name@company.com">
-        <br>
         <button type="button" id="button1">Try for free</button>
         </div>
     </footer>
