added circles to header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="text" id="email" name="email" placeholder="Name@company.com">
         <button type="button" id="button1">Try for free</button>
         </div>
-        
+        <img src="images/circles.png" alt="circles" id="circles">
         
     <section class="grid">
         <div><img src="images\Cartoon_Network_logo.png"></div>
